# simplest-possible-time-series

./: Cargo.toml  README.md  docker-compose.yml
migrations/2025-06-15-012345_create_ts/: down.sql  up.sql
src/: helpers.rs  models.rs  receiver.rs  schema.rs  test-data-generator.rs
views/: example_code_binary_sizes.sql  grafana-panel-code-binary-size.json
